--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Exclusive Nails Salon</title>
+  <title>Nails By Mads</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <!-- Header with Scroll Zoom Background -->
   <header id="home">
     <nav>
-      <div class="brand">Exclusive Nails Salon</div>
+      <div class="brand">Nails By Mads</div>
       <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
@@ -36,7 +36,7 @@
   <section id="about" class="about container">
     <h2>About Us</h2>
     <p>
-      At Exclusive Nails Salon, we offer high-quality nail care services in a luxurious and relaxing environment.
+      At Nails By Mads, we offer high-quality nail care services in a luxurious and relaxing environment.
       Our skilled technicians are dedicated to providing exceptional service and personalized care.
     </p>
     <div class="team">
