--- a/admin.html
+++ b/admin.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin - Exclusive Nails Salon</title>
   <link rel="stylesheet" href="css/admin.css">
-  <!-- FullCalendar CSS (CDN) -->
-  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.7/index.global.min.css" rel="stylesheet">
+  <!-- Updated FullCalendar CSS (CDN) -->
+  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.7/main.min.css" rel="stylesheet">
 </head>
 <body>
   <!-- Login Form -->
@@ -50,7 +50,7 @@
 
   <!-- Firebase and Admin Script -->
   <script type="module" src="js/admin.js"></script>
-  <!-- FullCalendar JS (CDN) -->
-  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.7/index.global.min.js"></script>
+  <!-- Updated FullCalendar JS (CDN) -->
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.7/main.global.min.js"></script>
 </body>
 </html>
