--- a/admin.html
+++ b/admin.html
@@ -48,9 +48,7 @@
     </div>
   </div>
 
-  <!-- Firebase and Admin Script -->
+  <!-- Firebase and Admin Script (ESM) -->
   <script type="module" src="js/admin.js"></script>
-  <!-- Updated FullCalendar JS (CDN) -->
-  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.7/main.global.min.js"></script>
 </body>
 </html>
