--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
     <div class="inner"></div>
     <div class="hero-content">
-      <h1>Welcome to Exclusive Nails Salon</h1>
+      <h1>Welcome to Nails By Mads</h1>
       <p>Pamper yourself with our exquisite nail care services.</p>
       <a href="#services" class="cta">Explore Services</a>
     </div>
@@ -177,5 +177,12 @@
 
   <!-- Firebase and Main Script -->
   <script type="module" src="js/script.js"></script>
+  
+  <!-- Scroll to Top on Load -->
+  <script>
+    window.addEventListener('load', () => {
+      window.scrollTo(0, 0);
+    });
+  </script>
 </body>
 </html>
