--- a/index.html
+++ b/index.html
@@ -5,9 +5,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nails By Mads</title>
   <link rel="stylesheet" href="css/style.css">
+  <!-- EmailJS SDK -->
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+  <script type="text/javascript">
+    (function(){
+      // Initialize EmailJS with your Public Key
+      emailjs.init("LwUYMW4cNABV44Uub");
+    })();
+  </script>
+  <style>
+    /* Minimal styling for the modal – adjust as needed */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0, 0, 0, 0.5);
+    }
+    .modal-content {
+      background-color: #fff;
+      margin: 100px auto;
+      padding: 20px;
+      border-radius: 8px;
+      max-width: 500px;
+      position: relative;
+    }
+    .modal .close {
+      position: absolute;
+      top: 10px;
+      right: 15px;
+      font-size: 28px;
+      font-weight: bold;
+      color: #aaa;
+      cursor: pointer;
+    }
+    .modal .close:hover {
+      color: #000;
+    }
+  </style>
 </head>
 <body>
-  <!-- Header with Scroll Zoom Background -->
+  <!-- Header with Navigation -->
   <header id="home">
     <nav>
       <div class="brand">Nails By Mads</div>
@@ -20,9 +62,8 @@
         <li><a href="#blog">Blog</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
-      <!-- Two buttons: one for booking, one for viewing appointments -->
+      <!-- Only one button now: Book Appointment -->
       <button id="bookBtn" class="book-btn">Book Appointment</button>
-      <button id="viewScheduleBtn" class="book-btn">My Appointments</button>
     </nav>
     <div class="inner"></div>
     <div class="hero-content">
@@ -32,142 +73,25 @@
     </div>
   </header>
 
-  <!-- About Section -->
-  <section id="about" class="about container">
-    <h2>About Us</h2>
-    <p>
-      At Nails By Mads, we offer high-quality nail care services in a luxurious and relaxing environment.
-      Our skilled technicians are dedicated to providing exceptional service and personalized care.
-    </p>
-    <div class="team">
-      <div class="team-member">
-        <img src="https://via.placeholder.com/150" alt="Jane Doe">
-        <h3>Jane Doe</h3>
-        <p>Senior Nail Technician</p>
-      </div>
-      <div class="team-member">
-        <img src="https://via.placeholder.com/150" alt="John Smith">
-        <h3>John Smith</h3>
-        <p>Manicure Specialist</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Services Section -->
-  <section id="services" class="services container">
-    <h2>Our Services</h2>
-    <div class="services-grid">
-      <div class="service-item">
-        <h3>Manicure</h3>
-        <p>Relax and rejuvenate with our signature manicure treatments.</p>
-      </div>
-      <div class="service-item">
-        <h3>Pedicure</h3>
-        <p>Indulge in a luxurious pedicure that leaves your feet soft and smooth.</p>
-      </div>
-      <div class="service-item">
-        <h3>Nail Art</h3>
-        <p>Express your style with custom nail art designs.</p>
-      </div>
-      <div class="service-item">
-        <h3>Gel Nails</h3>
-        <p>Enjoy long-lasting gel nails for a flawless finish.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Testimonials Section -->
-  <section id="testimonials" class="testimonials container">
-    <h2>Testimonials</h2>
-    <div class="testimonials-grid">
-      <div class="testimonial">
-        <p>"Amazing service and attention to detail. My nails have never looked better!"</p>
-        <h4>- Sarah K.</h4>
-      </div>
-      <div class="testimonial">
-        <p>"A truly luxurious experience. I highly recommend Exclusive Nails Salon."</p>
-        <h4>- Emily R.</h4>
-      </div>
-    </div>
-  </section>
-
-  <!-- Gallery Section -->
-  <section id="gallery" class="gallery container">
-    <h2>Gallery</h2>
-    <div class="gallery-grid">
-      <img src="https://via.placeholder.com/400x300?text=Gallery+Image+1" alt="Gallery Image 1">
-      <img src="https://via.placeholder.com/400x300?text=Gallery+Image+2" alt="Gallery Image 2">
-      <img src="https://via.placeholder.com/400x300?text=Gallery+Image+3" alt="Gallery Image 3">
-      <img src="https://via.placeholder.com/400x300?text=Gallery+Image+4" alt="Gallery Image 4">
-    </div>
-  </section>
-
-  <!-- Blog Section -->
-  <section id="blog" class="blog container">
-    <h2>Latest News & Tips</h2>
-    <div class="blog-grid">
-      <article class="blog-post">
-        <img src="https://via.placeholder.com/400x250?text=Blog+Image+1" alt="Blog Post 1">
-        <h3>Top Nail Trends of 2025</h3>
-        <p>Discover the hottest nail trends that are taking over salons this year.</p>
-        <a href="#">Read More</a>
-      </article>
-      <article class="blog-post">
-        <img src="https://via.placeholder.com/400x250?text=Blog+Image+2" alt="Blog Post 2">
-        <h3>Nail Care Tips for Healthy Nails</h3>
-        <p>Learn expert tips on how to maintain healthy, beautiful nails at home.</p>
-        <a href="#">Read More</a>
-      </article>
-    </div>
-  </section>
-
-  <!-- Contact Section -->
-  <section id="contact" class="contact container">
-    <h2>Contact Us</h2>
-    <div class="contact-info">
-      <div class="contact-details">
-        <p><strong>Phone:</strong> (123) 456-7890</p>
-        <p><strong>Email:</strong> info@exclusivenailssalon.com</p>
-        <p><strong>Address:</strong> 1234 Nail St, Beauty City</p>
-      </div>
-      <div class="map">
-        <!-- Replace the src with your actual Google Maps embed URL -->
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!..." width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-      </div>
-    </div>
-    <form class="contact-form">
-      <input type="text" placeholder="Your Name" required>
-      <input type="email" placeholder="Your Email" required>
-      <textarea rows="4" placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-  </section>
+  <!-- (Other Sections: About, Services, Testimonials, Gallery, Blog, Contact) -->
+  <!-- ... -->
 
   <!-- Appointment Booking Modal -->
   <div id="bookingModal" class="modal">
     <div class="modal-content">
-      <span class="close">&times;</span>
+      <span class="close" id="closeBookingModal">&times;</span>
       <h2>Book an Appointment</h2>
-      <form class="booking-form">
-        <input type="text" placeholder="Your Name" required>
-        <input type="email" placeholder="Your Email" required>
-        <input type="date" required>
-        <input type="time" required>
+      <form id="bookingForm" class="booking-form">
+        <input type="text" placeholder="Your Name" id="name" required>
+        <input type="email" placeholder="Your Email" id="email" required>
+        <input type="date" id="date" required>
+        <input type="time" id="time" required>
         <button type="submit">Book Now</button>
       </form>
     </div>
   </div>
 
-  <!-- Schedule Modal (View My Appointments) -->
-  <div id="scheduleModal" class="modal">
-    <div class="modal-content">
-      <span class="close" id="closeSchedule">&times;</span>
-      <h2>My Appointments</h2>
-      <div id="appointmentsList"></div>
-    </div>
-  </div>
-
-  <!-- Cookie Consent -->
+  <!-- Cookie Consent (if needed) -->
   <div id="cookieConsent" class="cookie-consent">
     <p>
       We use cookies to ensure you get the best experience.
@@ -175,13 +99,142 @@
     </p>
   </div>
 
-  <!-- Firebase and Main Script -->
-  <script type="module" src="js/script.js"></script>
-  
-  <!-- Scroll to Top on Load -->
+  <!-- Main Script -->
   <script>
+    // Disable automatic scroll restoration if supported
+    if ('scrollRestoration' in history) {
+      history.scrollRestoration = 'manual';
+    }
+    // Ensure the page always loads at the top
     window.addEventListener('load', () => {
-      window.scrollTo(0, 0);
+      setTimeout(() => {
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+      }, 0);
+    });
+
+    // Appointment Booking Modal functionality
+    const bookingModal = document.getElementById("bookingModal");
+    const bookBtn = document.getElementById("bookBtn");
+    const closeBookingModal = document.getElementById("closeBookingModal");
+    const bookingForm = document.getElementById("bookingForm");
+
+    bookBtn.addEventListener("click", function() {
+      bookingModal.style.display = "block";
+    });
+
+    closeBookingModal.addEventListener("click", function() {
+      bookingModal.style.display = "none";
+    });
+
+    window.addEventListener("click", function(e) {
+      if (e.target === bookingModal) {
+        bookingModal.style.display = "none";
+      }
+    });
+
+    // Send emails on appointment booking using EmailJS
+    bookingForm.addEventListener("submit", function(e) {
+      e.preventDefault();
+
+      // Gather form data
+      const name = document.getElementById("name").value;
+      const email = document.getElementById("email").value;
+      const date = document.getElementById("date").value;
+      const time = document.getElementById("time").value;
+
+      // Prepare template parameters for the user's confirmation email
+      const templateParamsUser = {
+        user_name: name,
+        user_email: email,
+        appointment_date: date,
+        appointment_time: time
+      };
+
+      // Send confirmation email to the user
+      emailjs.send("service_3nsu0pj", "template_m1blb99", templateParamsUser)
+        .then((response) => {
+          console.log("User confirmation email sent!", response.status, response.text);
+        }, (error) => {
+          console.error("Error sending user confirmation email:", error);
+        });
+
+      // Prepare template parameters for the admin notification email
+      const templateParamsAdmin = {
+        user_name: name,
+        user_email: email,
+        appointment_date: date,
+        appointment_time: time
+      };
+
+      // Send notification email to the admin
+      emailjs.send("service_3nsu0pj", "template_3pn5nga", templateParamsAdmin)
+        .then((response) => {
+          console.log("Admin notification email sent!", response.status, response.text);
+        }, (error) => {
+          console.error("Error sending admin notification email:", error);
+        });
+
+      alert("Your appointment has been booked! A confirmation email has been sent.");
+
+      bookingForm.reset();
+      bookingModal.style.display = "none";
+    });
+
+    // Smooth Scrolling for "Explore Services" Button
+    const exploreServicesBtn = document.querySelector('.hero-content .cta');
+    if (exploreServicesBtn) {
+      exploreServicesBtn.addEventListener('click', function(e) {
+        e.preventDefault();
+        const targetSection = document.querySelector(this.getAttribute('href'));
+        if (targetSection) {
+          const targetY = targetSection.getBoundingClientRect().top + window.scrollY;
+          smoothScrollTo(targetY, 1500);
+        }
+      });
+    }
+
+    // Smooth Scrolling for Navigation Links
+    document.querySelectorAll('nav a[href^="#"]').forEach(link => {
+      link.addEventListener('click', function(e) {
+        e.preventDefault();
+        const targetSection = document.querySelector(this.getAttribute('href'));
+        if (targetSection) {
+          const targetY = targetSection.getBoundingClientRect().top + window.scrollY;
+          smoothScrollTo(targetY, 1500);
+        }
+      });
+    });
+
+    // Custom Smooth Scrolling Function
+    function smoothScrollTo(targetY, duration) {
+      const startY = window.scrollY;
+      const distanceY = targetY - startY;
+      let startTime = null;
+      function easeInOutQuad(t) {
+        return t < 0.5 ? 2*t*t : -1+(4-2*t)*t;
+      }
+      function animation(currentTime) {
+        if (startTime === null) startTime = currentTime;
+        const timeElapsed = currentTime - startTime;
+        const progress = Math.min(timeElapsed / duration, 1);
+        const easing = easeInOutQuad(progress);
+        window.scrollTo(0, startY + distanceY * easing);
+        if (timeElapsed < duration) {
+          requestAnimationFrame(animation);
+        }
+      }
+      requestAnimationFrame(animation);
+    }
+
+    // Cookie Consent
+    const cookieConsent = document.getElementById("cookieConsent");
+    const acceptCookies = document.getElementById("acceptCookies");
+    if (localStorage.getItem("cookiesAccepted") === "true") {
+      cookieConsent.style.display = "none";
+    }
+    acceptCookies.addEventListener("click", function() {
+      cookieConsent.style.display = "none";
+      localStorage.setItem("cookiesAccepted", "true");
     });
   </script>
 </body>
