--- a/index.html
+++ b/index.html
@@ -267,7 +267,9 @@
       <form id="bookingForm" class="booking-form">
         <input type="text" placeholder="Your Name" id="name" required>
         <input type="email" placeholder="Your Email" id="email" required>
+      <h5>Date</h5>
         <input type="date" id="date" required>
+        <h5>Time</h5>
         <input type="time" id="time" required>
         <button type="submit">Book Now</button>
       </form>
