--- a/index.html
+++ b/index.html
@@ -256,8 +256,102 @@
     </div>
   </header>
 
-  <!-- (Other Sections: About, Services, Testimonials, Gallery, Blog, Contact) -->
-  <!-- ... -->
+  <!-- About Section -->
+  <section id="about" class="about container">
+    <h2>About Us</h2>
+    <p>
+      At Nails By Mads, we offer high-quality nail care services in a luxurious and relaxing environment. Our skilled technicians are dedicated to providing exceptional service and personalized care to help you look and feel your best.
+    </p>
+  </section>
+
+  <!-- Services Section -->
+  <section id="services" class="services container">
+    <h2>Our Services</h2>
+    <div class="services-grid">
+      <div class="service-item">
+        <h3>Manicure</h3>
+        <p>Relax and rejuvenate with our signature manicure treatments.</p>
+      </div>
+      <div class="service-item">
+        <h3>Pedicure</h3>
+        <p>Indulge in a luxurious pedicure for soft, smooth feet.</p>
+      </div>
+      <div class="service-item">
+        <h3>Nail Art</h3>
+        <p>Express your style with custom nail art designs.</p>
+      </div>
+      <div class="service-item">
+        <h3>Gel Nails</h3>
+        <p>Enjoy long-lasting, flawless nails with our gel services.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Testimonials Section -->
+  <section id="testimonials" class="testimonials container">
+    <h2>Testimonials</h2>
+    <div class="testimonials-grid">
+      <div class="testimonial">
+        <p>"Amazing service and attention to detail. My nails have never looked better!"</p>
+        <h4>- Sarah K.</h4>
+      </div>
+      <div class="testimonial">
+        <p>"A truly luxurious experience. I highly recommend Nails By Mads!"</p>
+        <h4>- Emily R.</h4>
+      </div>
+    </div>
+  </section>
+
+  <!-- Gallery Section -->
+  <section id="gallery" class="gallery container">
+    <h2>Gallery</h2>
+    <div class="gallery-grid">
+      <img src="https://via.placeholder.com/400x300?text=Gallery+Image+1" alt="Gallery Image 1">
+      <img src="https://via.placeholder.com/400x300?text=Gallery+Image+2" alt="Gallery Image 2">
+      <img src="https://via.placeholder.com/400x300?text=Gallery+Image+3" alt="Gallery Image 3">
+      <img src="https://via.placeholder.com/400x300?text=Gallery+Image+4" alt="Gallery Image 4">
+    </div>
+  </section>
+
+  <!-- Blog Section -->
+  <section id="blog" class="blog container">
+    <h2>Latest News & Tips</h2>
+    <div class="blog-grid">
+      <article class="blog-post">
+        <img src="https://via.placeholder.com/400x250?text=Blog+Image+1" alt="Blog Post 1">
+        <h3>Top Nail Trends of 2025</h3>
+        <p>Discover the hottest nail trends that are taking over salons this year.</p>
+        <a href="#">Read More</a>
+      </article>
+      <article class="blog-post">
+        <img src="https://via.placeholder.com/400x250?text=Blog+Image+2" alt="Blog Post 2">
+        <h3>Nail Care Tips for Healthy Nails</h3>
+        <p>Learn expert tips on how to maintain healthy, beautiful nails at home.</p>
+        <a href="#">Read More</a>
+      </article>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="contact container">
+    <h2>Contact Us</h2>
+    <div class="contact-info">
+      <div class="contact-details">
+        <p><strong>Phone:</strong> (123) 456-7890</p>
+        <p><strong>Email:</strong> info@nailsbymads.com</p>
+        <p><strong>Address:</strong> 1234 Nail St, Beauty City</p>
+      </div>
+      <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!..." width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      </div>
+    </div>
+    <form class="contact-form">
+      <input type="text" placeholder="Your Name" required>
+      <input type="email" placeholder="Your Email" required>
+      <textarea rows="4" placeholder="Your Message" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
 
   <!-- Appointment Booking Modal -->
   <div id="bookingModal" class="modal">
