--- a/index.html
+++ b/index.html
@@ -32,13 +32,15 @@
 
     .modal-content {
       background-color: #fefefe;
-      margin: 10% auto; /* 10% from the top and centered */
-      padding: 25px;
+      margin: 5% auto; /* Reduced from 10% to 5% */
+      padding: 20px; /* Reduced padding */
       border: 1px solid #888;
-      width: 80%; /* Could be more or less, depending on screen size */
-      max-width: 600px; /* Maximum width */
+      width: 90%; /* Increased from 80% */
+      max-width: 500px; /* Reduced from 600px */
       border-radius: 8px;
       position: relative;
+      max-height: 90vh; /* Limit height to 90% of viewport */
+      overflow-y: auto; /* Enable scrolling if content is too long */
     }
 
     .close {
@@ -60,14 +62,14 @@
 
     /* Booking Form Styles */
     .booking-form .form-field {
-      margin-bottom: 15px;
+      margin-bottom: 12px; /* Reduced from 15px */
     }
 
     .booking-form label {
       display: block;
-      margin-bottom: 5px;
+      margin-bottom: 3px; /* Reduced from 5px */
       font-weight: bold;
-      font-size: 0.9em;
+      font-size: 0.85em; /* Reduced from 0.9em */
     }
 
     .booking-form input[type="text"],
@@ -77,15 +79,15 @@
     .booking-form input[type="time"],
     .booking-form textarea {
       width: 100%;
-      padding: 10px;
+      padding: 8px; /* Reduced from 10px */
       border: 1px solid #ccc;
       border-radius: 4px;
-      box-sizing: border-box; /* Include padding and border in element's total width and height */
+      box-sizing: border-box;
     }
 
     .booking-form .form-row {
       display: flex;
-      gap: 15px; /* Space between columns */
+      gap: 10px; /* Reduced from 15px */
     }
 
     .booking-form .form-row .form-field {
@@ -119,45 +121,46 @@
       margin-left: 2px;
     }
 
-    /* Note Styles */
+    /* Note Styles - More compact */
     .consent-note {
       color: black; /* Ensure text is readable */
       background: #f9f6ff; /* Light purple background */
       border-left: 5px solid #b47aff; /* Purple accent border */
-      padding: 12px 20px;
+      padding: 8px 15px; /* Reduced padding */
       border-radius: 6px;
-      font-size: 1.15em;
+      font-size: 1em; /* Reduced from 1.15em */
       font-weight: bold;
-      margin-top: 10px;
-      margin-bottom: 10px;
+      margin-top: 8px;
+      margin-bottom: 8px;
     }
 
-    .food-allergy-note-modal { /* Specific class for modal note */
+    .food-allergy-note-modal {
       background: #fffbe7; /* Light yellow background */
       border-left: 5px solid #ffc107; /* Yellow accent border */
-      padding: 12px 20px;
+      padding: 8px 15px; /* Reduced padding */
       border-radius: 6px;
-      font-size: 1.08em;
-      margin-bottom: 16px;
+      font-size: 0.95em; /* Reduced from 1.08em */
+      margin-bottom: 12px; /* Reduced from 16px */
       color: #555; /* Slightly darker text for better contrast */
     }
+
     .food-allergy-note-modal strong {
-        color: #333; /* Darker strong text */
+      color: #333; /* Darker strong text */
     }
 
     .flexible-hours-note {
       background: #e9d8ff; /* Lighter purple background */
       color: #3c1a6e; /* Darker purple text */
       border-left: 4px solid #6318f9; /* Strong purple accent border */
-      padding: 14px 22px;
+      padding: 10px 15px; /* Reduced padding */
       border-radius: 6px;
-      margin-bottom: 18px;
-      font-size: 1.12em;
-    }
-    .flexible-hours-note strong {
-        color: #4a148c; /* Even darker purple for strong text */
+      margin-bottom: 12px; /* Reduced from 18px */
+      font-size: 1em; /* Reduced from 1.12em */
     }
 
+    .flexible-hours-note strong {
+      color: #4a148c; /* Even darker purple for strong text */
+    }
 
     /* Style for the footer food allergy note to match appointment notes */
     .food-allergy-note-footer {
@@ -175,6 +178,27 @@
         color: #333; /* Ensure strong text is readable */
      }
 
+    /* Make notes more compact on mobile */
+    @media screen and (max-width: 480px) {
+      .modal-content {
+        margin: 2% auto;
+        padding: 15px;
+        width: 95%;
+      }
+
+      .booking-form .form-row {
+        flex-direction: column;
+        gap: 8px;
+      }
+
+      .consent-note,
+      .food-allergy-note-modal,
+      .flexible-hours-note {
+        padding: 8px 12px;
+        font-size: 0.9em;
+        margin-bottom: 8px;
+      }
+    }
 
   </style>
 
@@ -225,7 +249,7 @@
     <div class="about-content">
       <img src="profile.jpg" alt="Profile Image" class="profile-img">
       <p>
-        At Nails By Mads, I offer high-quality nail care services, my starting point is my home, and I plan to be come certified and get a real studio in the future! I am 18 and graduating highschool this year. I will be attending Mercyhurst University in fall of 2025 as a Criminal Justice major.
+        At Nails By Mads, I offer high-quality nail care services, my starting point is my home, and I plan to become certified and get a real studio in the future! I am 18 and graduated high school this year. I will be attending Mercyhurst University in fall of 2025 as a Criminal Justice major.
       </p>
     </div>
   </section>
@@ -434,7 +458,7 @@
         </div>
         <!-- Using the dedicated CSS class for modal food allergy note styling -->
         <div class="food-allergy-note-modal">
-          <strong>Important Food Allergy Policy:</strong> Unfortunately, due to my deadly food allergy to wheat/gluten, I do not recommend eating during your appointment. This is for my own safety. If you have a reason you need to bring food with you, feel free to message me about details. I love all of my clients and appreciate your cooperation!
+          <strong>Important Food Allergy Policy:</strong> Unfortunately, due to my food allergy to wheat/gluten, I do not recommend eating during your appointment. This is for my own safety. If you have a reason you need to bring food with you, feel free to message me about details. I love all of my clients and appreciate your cooperation!
         </div>
 
         <button type="submit" style="margin-top: 12px;">Request Appointment</button> <!-- Changed text slightly -->
@@ -453,7 +477,7 @@
   <!-- Footer Section (Full Width) -->
   <!-- Using the dedicated CSS class for footer food allergy note styling -->
   <div class="food-allergy-note-footer">
-    <strong>Important Food Allergy Policy:</strong> Unfortunately, due to my deadly food allergy to wheat/gluten, I do not recommend eating during your appointment. This is for my own safety. If you have a reason you need to bring food with you, feel free to message me about details. I love all of my clients and appreciate your cooperation!
+    <strong>Important Food Allergy Policy:</strong> Unfortunately, due to my food allergy to wheat/gluten, I do not recommend eating during your appointment. This is for my own safety. If you have a reason you need to bring food with you, feel free to message me about details. I love all of my clients and appreciate your cooperation!
   </div>
   <footer class="footer">
     <div class="footer-content">
@@ -571,7 +595,6 @@ emailjs.sendForm('service_3nsu0pj', 'template_3pn5nga', this)
     });
 
   </script>
-  <!-- Include your original script.js if it contains other functionality -->
   <!-- <script src="js/script.js"></script> -->
 </body>
 </html>
