--- a/index.html
+++ b/index.html
@@ -243,6 +243,146 @@
       }
     }
 
+    .blog {
+      padding: 60px 20px;
+      text-align: center;
+      width: 100%;
+      box-sizing: border-box;
+    }
+
+    .blog h2 {
+      margin-bottom: 40px;
+      font-size: 2.5em;
+      color: #fff;
+      width: 100%;
+    }
+
+    .blog-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 30px;
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 0 20px;
+      width: 100%;
+      box-sizing: border-box;
+    }
+
+    .blog-post {
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+      transition: transform 0.3s ease;
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+      backdrop-filter: blur(5px);
+      width: 100%;
+      box-sizing: border-box;
+    }
+
+    .blog-post:hover {
+      transform: translateY(-5px);
+    }
+
+    .blog-post img {
+      width: 100%;
+      height: 250px;
+      object-fit: cover;
+      display: block;
+    }
+
+    .blog-post-meta {
+      padding: 15px 20px 0;
+      color: #fff;
+      font-size: 0.9em;
+      font-weight: 500;
+      text-align: center;
+    }
+
+    .blog-post-content {
+      padding: 15px 20px 25px;
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      text-align: center;
+    }
+
+    .blog-post-content h3 {
+      margin: 0 0 10px 0;
+      font-size: 1.4em;
+      color: #fff;
+      font-weight: bold;
+    }
+
+    .blog-post-content p {
+      margin: 0;
+      color: #fff;
+      line-height: 1.6;
+      font-size: 1.1em;
+    }
+
+    @media screen and (max-width: 768px) {
+      .blog {
+        padding: 40px 15px;
+      }
+
+      .blog h2 {
+        font-size: 2em;
+        margin-bottom: 30px;
+      }
+
+      .blog-grid {
+        grid-template-columns: 1fr;
+        max-width: 100%;
+        padding: 0 10px;
+        gap: 20px;
+      }
+
+      .blog-post {
+        max-width: 400px;
+        margin: 0 auto;
+      }
+
+      .blog-post img {
+        height: 200px;
+      }
+
+      .blog-post-content h3 {
+        font-size: 1.3em;
+      }
+
+      .blog-post-content p {
+        font-size: 1em;
+      }
+    }
+
+    @media screen and (max-width: 480px) {
+      .blog {
+        padding: 30px 10px;
+      }
+
+      .blog h2 {
+        font-size: 1.8em;
+        margin-bottom: 25px;
+      }
+
+      .blog-grid {
+        padding: 0 5px;
+        gap: 15px;
+      }
+
+      .blog-post {
+        max-width: 100%;
+      }
+
+      .blog-post img {
+        height: 180px;
+      }
+    }
+
   </style>
 
 </head>
